<resources>
    <string name="app_name">Bus++</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_podesavanja">Settings</string>
    <string name="title_activity_glavna__aktivnost">Main_Activity</string>

    <string name="title_section1">Lines</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">Informations</string>

    <string name="view_red_voznje">Timetable</string>
    <string name="show_linija">Show Line</string>
    <string name="pocetak">Start</string>
    <string name="finish_marker">Destination</string>
    <string name="vreme_dolaska">Time of arrival</string>
    <string name="vreme_polaska">Departure Time</string>
    <string name="napomena">Notes</string>
    <string name="linija">Line</string>
    <string name="smer">Route</string>
    <string name="naziv">Title</string>
    <string name="stanica">Bus stop</string>

    <string name="ekonomicni">Economical</string>
    <string name="polazna_stanica">Start bus stop</string>
    <string name="zavrsna_stanica">Finish bus stop</string>
    <string name="postavi_start">Set start location</string>
    <string name="clean_map">Clean map</string>
    <string name="pesacenje">Walking</string>
    <string name="cilj">Finish</string>
    <string name="minwalk">Minimum Walking</string>
    <string name="optimalni">Fastest</string>
    <string name="ekoopt">Fastest Economical</string>
    <string name="choose_mode">Choose navigation mode:</string>
    <string name="nadji_put">Find path</string>
    <string name="izaberi_cilj">Choose finish spot on map</string>
    <string name="show_on_map">Show on map</string>
    <string name="cancel">Cancel</string>
    <string name="bus_informations">Informations in bus:</string>

    <string name="smerA">Route A</string>
    <string name="smerB">Route B</string>
    <string name="address">Search for address</string>
    <string name="guzva">Crowded</string>
    <string name="klimatizovanost">Stuffiness</string>
    <string name="kontrola">Control</string>
    <string name="send_info">Send info</string>
    <string name="ukupno">Overall</string>
    <string name="presedanje">Stopover</string>

    <string name="hello_world">Hello world!</string>
    <string name="english">English</string>
    <string name="srpski">Srpski</string>
    <string name="komentari">Enter comment</string>
    <string name="start">Start</string>
    <string name="info_kontrole">No informations about controls</string>
    <string name="last_seen">Last seen:</string>
    <string name="no_more_tokens">No more tokens</string>
    <string name="number_tokens">Remaining number of tokens</string>

</resources>
