<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/pozadina"
        android:id="@+id/linija_id"
        android:text="@string/linija"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:background="@drawable/pozadina"
        android:gravity="center"
        android:id="@+id/naziv_id"
        android:text="@string/naziv"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/smer_id"
        android:layout_height="wrap_content"
        android:background="@drawable/pozadina"
        android:gravity="center"
        android:text="@string/smer"
        />

</LinearLayout>