<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/kontenjer"
    tools:context="rs.mosis.diplomski.bus.Glavna_Aktivnost$Odgovor_Servera">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/zaglavlje"
        android:visibility="invisible"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:tag="vreme_dolaska"
            android:text="@string/vreme_dolaska"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:tag="vreme_polaska"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/vreme_polaska"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:tag="napomena"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/napomena"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/zaglavlje"
        android:id="@+id/skrol"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/vremena"

                >

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/info_o_liniji"
                android:visibility="invisible"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/linija"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/naziv"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/smer"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
