<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/pozadina"
    >

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/guzva"
        android:layout_height="match_parent"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/rating_guzva"
        android:layout_gravity="center"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:stepSize="1"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/pozadina"
    >

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/klimatizovanost"
        android:layout_height="match_parent"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/rating_klimatizovanost"
        android:layout_height="match_parent"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:stepSize="1"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/pozadina"
    >

    <TextView
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/ukupno"
        android:layout_height="match_parent"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/rating_ukupno"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:isIndicator="true"
        android:stepSize="0.1"/>

</LinearLayout>
</LinearLayout>
