<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/pozadina"
        >

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/guzva"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_guzva"
            android:layout_gravity="center"
            android:isIndicator="false"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/pozadina"
        android:gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:id="@+id/primer"
            android:text="@string/klimatizovanost"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="false"
            android:id="@+id/rating_klimatizovanost"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/pozadina"
        >

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/ukupno"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/rating_ukupno"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:isIndicator="true"
            android:stepSize="0.1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</LinearLayout>
