<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/crowd_sourcing"
        android:visibility="visible"
        android:layout_width="fill_parent"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:background="@drawable/pozadina"
        android:theme="@style/Animation.AppCompat.DropDownUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"

            android:layout_height="match_parent">

            <LinearLayout android:id="@+id/rating_bars"
                          android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:background="@drawable/pozadina"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/guzva"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rating_guzva"
                        android:layout_gravity="center"
                        android:isIndicator="true"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:background="@drawable/pozadina"
                    android:gravity="fill_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:id="@+id/primer"
                        android:text="@string/klimatizovanost"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:isIndicator="true"
                        android:id="@+id/rating_klimatizovanost"
                        android:layout_height="wrap_content"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:stepSize="0.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:background="@drawable/pozadina"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:text="@string/ukupno"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/rating_ukupno"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:isIndicator="true"
                        android:stepSize="0.1"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/komentar"
                android:background="@drawable/pozadina"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>